fix: Remove space from middleware filenames and update schema

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NODE_ENV="development" # change development into production while deploaying
-PORT=YOUR_PORT
-DATABASE_URL=YOU_DB_URI
+PORT=8000
+DATABASE_URL="postgresql://username:password@localhost:5431/defaultDB?schema=public"
 SECRET_KEY=YOUR_SECRETE
