--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "artstay",
-  "version": "1.0.0",
+  "name": "backend-node-template",
+  "version": "1.0.1",
   "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "eslint . && bun run type-check && bun run fmt",
     "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "fmt": "prettier --write .",
-    "prebuild": "rimraf -rf ./dist  && pnpm lint  && pnpm type-check && pnpm fmt",
-    "build": "pnpm tsc --build",
-    "dev": "pnpm build  && concurrently  \"bun --watch ./src/server.ts\" \"tsc -w\"",
-    "start": "pnpm build && node --env-file .env ./dist/server.js",
+    "prebuild": "bun run lint && rimraf -rf ./dist",
+    "build": "bun run tsc --build",
+    "dev": "bun run build  && concurrently  \"bun --watch ./src/server.ts\" \"tsc -w\"",
+    "start": "bun run build && node --env-file .env ./dist/server.js",
     "commit-lint": "commitlint  --edit",
-    "precommit": "concurrently \"pnpm run lint\" \"pnpm run type-check && pnpm run fmt && git add .\"",
+    "precommit": "concurrently \"eslint .\" \"bun run type-check && bun run fmt && git add .\"",
     "prepare": "husky",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:deploy": "prisma deploy",
     "db:studio": "prisma studio",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "project:deploy": "bun run db:generate && bun run db:push && bun run start"
   },
   "keywords": [],
   "author": "zlaam",
